# kitchen-kata-async-rust

./: Cargo.toml  timings.md
src/: food.rs  handler.rs  kitchen.rs  main.rs
