[package]
name = "kitchen-rs"
version = "0.1.0"
authors = ["Timo Freiberg <timo.freiberg@novatec-gmbh.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.5.0", features = ["unstable"] }
rand = "0.7.3"
