[package]
name = "kitchen-rs"
version = "0.1.0"
authors = ["Timo Freiberg <timo.freiberg@novatec-gmbh.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
tracing = "0.1.13"
tracing-subscriber = "0.2.3"
smol = "0.1.5"
futures = "0.3.5"
anyhow = "1.0.31"
piper = "0.1.1"
